[gd_scene load_steps=11 format=3 uid="uid://b1knga8535gvv"]

[ext_resource type="Script" uid="uid://cqguabv2a1c7f" path="res://modal.gd" id="1_o6smb"]
[ext_resource type="LabelSettings" uid="uid://cp7awd4s8rtcn" path="res://assets/themes/modal_body.tres" id="2_amk0a"]
[ext_resource type="LabelSettings" uid="uid://b4jgney45syyy" path="res://assets/themes/modal_tittle.tres" id="2_g7ajv"]
[ext_resource type="LabelSettings" uid="uid://cmc7vbpljmiry" path="res://assets/themes/modal_url.tres" id="4_4vfp2"]
[ext_resource type="Texture2D" uid="uid://dxhx77amrb5ly" path="res://src/ui/components/utils/qwe.png" id="4_ao2vh"]
[ext_resource type="Theme" uid="uid://bn7q4ap7m5gdu" path="res://assets/themes/dcl_theme.tres" id="4_figov"]
[ext_resource type="Texture2D" uid="uid://scwrxbf7tfps" path="res://src/ui/components/utils/qwe2.png" id="5_ao2vh"]
[ext_resource type="Texture2D" uid="uid://bpsb828rp2tlt" path="res://assets/ui/modal-alert-icon.svg" id="5_figov"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_figov"]
bg_color = Color(0.29803923, 0.078431375, 0.6431373, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_figov"]

[node name="Modal" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)
script = ExtResource("1_o6smb")

[node name="MarginContainer_Modal" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer_Modal"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_figov")

[node name="MarginContainer_Content" type="MarginContainer" parent="MarginContainer_Modal/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 90

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label_Title" type="Label" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
text = "Loading is taking longer than expected"
label_settings = ExtResource("2_g7ajv")
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxEmpty_figov")

[node name="Label_Body" type="Label" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
text = "You can reload the experience, or jump in now, it should keep loading in the background."
label_settings = ExtResource("2_amk0a")
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator_Url" type="HSeparator" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 14
theme_override_styles/separator = SubResource("StyleBoxEmpty_figov")

[node name="Label_Url" type="Label" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
text = "url"
label_settings = ExtResource("4_4vfp2")
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 53
theme_override_styles/separator = SubResource("StyleBoxEmpty_figov")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 26

[node name="Button_Secondary" type="Button" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_figov")
theme_type_variation = &"SecondaryButton"
text = "SECONDARY"

[node name="Button_Primary" type="Button" parent="MarginContainer_Modal/PanelContainer/MarginContainer_Content/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_figov")
text = "PRIMARY"

[node name="Control" type="Control" parent="MarginContainer_Modal/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="MarginContainer_Modal/PanelContainer/Control"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(82.667, 66.667)
layout_mode = 0
offset_left = -41.333
offset_top = -33.333
offset_right = 41.334
offset_bottom = 33.334
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("5_figov")
expand_mode = 1
stretch_mode = 4

[node name="Qwe" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.21960784)
position = Vector2(297, 348.00003)
scale = Vector2(1.1834284, 1.1834282)
texture = ExtResource("4_ao2vh")

[node name="Qwe2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.078431375)
position = Vector2(279, 304)
scale = Vector2(0.53193825, 0.53193825)
texture = ExtResource("5_ao2vh")

[node name="TESTING_PORPUSE" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="TESTING_PORPUSE"]
layout_mode = 2
text = "CONNECTION LOST"

[node name="Button2" type="Button" parent="TESTING_PORPUSE"]
layout_mode = 2
text = "EXTERNAL LINK"

[node name="Button3" type="Button" parent="TESTING_PORPUSE"]
layout_mode = 2
text = "SCENE TIME OUT"

[node name="Button4" type="Button" parent="TESTING_PORPUSE"]
layout_mode = 2
text = "TELEPORT"

[connection signal="pressed" from="TESTING_PORPUSE/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TESTING_PORPUSE/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="TESTING_PORPUSE/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="TESTING_PORPUSE/Button4" to="." method="_on_button_4_pressed"]
